--- a/main.ipynb
+++ b/main.ipynb
@@ -233,8 +233,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we'd deduct some taxes from this, but generally speaking just living in your own apartment is not going to be worth it. "
+    "Note that we'd deduct some taxes from this, but generally speaking just living in your own apartment is not going to be worth it. We can look at a 50 year time horizon as well."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
