--- a/main.ipynb
+++ b/main.ipynb
@@ -30,22 +30,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plug your numbers here in whole euros\n",
-    "MONTHLY_SALARY          = 4200\n",
-    "INVESTMENTS             = 51000\n",
-    "SUPPLEMENTARY_INCOME    = 800 # account for all income that's not from your salary, averaged over a year"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we'll want to consider a few things:\n",
+    "We'll want to consider a few things:\n",
     "\n",
     "    1) If you have investments, we need to approximate the annual return. For this, if your investments resides in the finnish markets, I pray for you. For American ETF's or stocks, I'll use the standard 7% inflation accounted for number. For simplicity, I'm assuming that you will never sell, or at least pay tax on your stocks that you're trading.\n",
     "\n",
@@ -149,17 +137,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(f\"When principal is {principal:.0f}€ with interest of {interest*12:.3f}%, for {duration} months:\\n Monthly payment is {monthly_payment:.0f}€ \\n Total cost of living is {total_cost:.0f}€\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Future value of investment strategy"
    ]
   },
   {
@@ -171,19 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Suppose we invested the difference after 25 years: 899536€ \n",
-      " of which gross profit is 328336€\n",
-      " of which net profit is 216702€\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def future_value(initial_investment, monthly_contribution, annual_rate, years):\n",
     "    r = annual_rate / 12  \n",
@@ -210,18 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Equity for mortgage after a time is 319346€\n",
-      "The difference between the two strategies is 580190€ before taxes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "apartment_annual_growth_ia = APPROXIMATE_VALUE_GROWTH_APARTMENT-INFLATION\n",
     "equity_value_after_mortgage = future_value(LOAN_AMOUNT, 0, apartment_annual_growth_ia, 25)\n",
@@ -246,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
